<resources>
    <string name="empty" />
    <string name="app_name">Password Manager</string>
    <string name="txt_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="vault">Vault</string>
    <string name="generator">Generator</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="length">Length</string>
    <string name="_10">10</string>
    <string name="copied_to_clipboard">Copied to ClipBoard</string>
    <string name="a_z">a-z</string>
    <string name="a_z_">A-Z</string>
    <string name="special_characters_amp">Special Characters\n(@#$%^&amp;*)></string>
    <string name="_0_9">0–9</string>
    <string name="reset">Reset</string>
    <string name="copy">Copy</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_your_account_to_continue">Create your account to continue</string>
    <string name="create_account">Create Account</string>
    <string name="save">Save</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="hint_full_name">Johnny Depp</string>
    <string name="hint_mobile_number">e.g +919090909090</string>
    <string name="website_entity_name">Website/Entity Name</string>
    <string name="hint_website_entity_name">e.g Google/HDFC Bank</string>
    <string name="web_address">Web Address</string>
    <string name="hint_web_address">e.g www.google.com</string>
    <string name="username_mobile_card_number">Username/Mobile/Card Number</string>
    <string name="notes">Notes</string>
    <string name="select_tag">Select Tag</string>
    <string name="generate">Generate</string>
    <string name="error_phone_number">Number should be of the format +91(Country Code)9876543210(Mobile number)</string>
    <string name="set_pin">Set PIN</string>
    <string name="please_set_your_pin_for_security">Please set your pin for security</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="re_enter_pin">Re-enter Pin</string>
    <string name="enable_fingerprint">Enable FingerPrint</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="login_with_fingerprint">Login with fingerprint</string>
    <string name="tag_name">Tag name</string>
    <string name="tag_description">Tag description</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="data_privacy">Data Privacy</string>
    <string name="lock_app">Lock App</string>
    <string name="export_file">Export File</string>
    <string name="import_file">Import File</string>
    <string name="clear_data">Clear Data</string>
    <string name="tags">Tags</string>
    <string name="file_name">File Name</string>
    <string name="file_key">File Key</string>
    <string name="generate_key">Generate Key</string>
    <string name="my_vault">My Vault</string>
    <string name="password_generator">Password Generator</string>
    <string name="create">Create</string>
    <string name="invalid_pin">Invalid Pin</string>
    <string name="authenticate_with_biometric">Complete authentication with your fingerprint!</string>
    <string name="please_enter_pin">Please enter Pin</string>
    <string name="entered_pin_do_not_match">Entered Pin do not match.</string>
    <string name="vault_options">Vault Options</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="view_edit">View/Edit</string>
    <string name="dummy_pass">********</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete? Once deleted data cannot be restored.</string>
    <string name="n_a">N/A</string>
    <string name="file_export_disclaimer">The file key is essential for accessing encrypted data in the file. Keep it secure; without the key, the data cannot be accessed.</string>
    <string name="unable_to_export_file">Unable to export file.</string>
    <string name="file_exported_successfully">File exported successfully.</string>
    <string name="unable_to_import_this_file">Unable to import this file.</string>
    <string name="choose_file">Choose File</string>
    <string name="_91">+91</string>
</resources>